Dark Theme Improvements

--- a/BLAZAM/Pages/Configure/Audit.razor
+++ b/BLAZAM/Pages/Configure/Audit.razor
@@ -11,20 +11,6 @@
 
 <AppPageTitle>Audit</AppPageTitle>
 <h3>Audit</h3>
-<DataGrid TItem="CommonAuditLog"
-          Data="@auditEntries.OrderByDescending(ae=>ae.Timestamp)"
-          Responsive
-          Filterable
-          Virtualize>
-    <DataGridCommandColumn />
-    <DataGridColumn Field="@nameof(CommonAuditLog.Timestamp)" Caption="Timestamp" />
-    <DataGridColumn Field="@nameof(CommonAuditLog.Username)" Caption="Username" />
-    <DataGridColumn Field="@nameof(CommonAuditLog.IpAddress)" Caption="IP" />
-    <DataGridColumn Field="@nameof(CommonAuditLog.Action)" Caption="Action" />
-    <DataGridColumn Field="@nameof(CommonAuditLog.Target)" Caption="Target" />
-    <DataGridColumn Field="@nameof(CommonAuditLog.BeforeAction)" Caption="Before" />
-    <DataGridColumn Field="@nameof(CommonAuditLog.AfterAction)" Caption="After" />
-</DataGrid>
 
 
 <SetSubHeader>
@@ -83,6 +69,8 @@
 
     protected override async Task OnInitializedAsync()
     {
+        if (selectedTab == null) selectedTab = "user";
+
         await base.OnInitializedAsync();
         BaseUri = "/audit";
         using (var context = await DbFactory.CreateDbContextAsync())
