--- a/BLAZAM/Pages/Configure/Settings.razor
+++ b/BLAZAM/Pages/Configure/Settings.razor
@@ -19,7 +19,7 @@
         </Items>
     </Tabs>
     </SetHeader>
-    <Tabs SelectedTab="@selectedTab">
+    <Tabs SelectedTab="@selectedTab" TextColor="TextColor.Light">
         
         <Content>
             <TabPanel Name="app" Padding="Padding.Is1.OnMobile.Is2.OnTablet.Is3.OnDesktop.Is4.OnWidescreen.Is5.OnFullHD">
