--- a/BLAZAM/Shared/Layouts/DirectoryConnectingIndicator.razor
+++ b/BLAZAM/Shared/Layouts/DirectoryConnectingIndicator.razor
@@ -1,5 +1,5 @@
 @inherits AppComponentBase
-@if (Monitor.DirectoryConnected == ConnectionState.Connecting)
+@if (Monitor.DirectoryConnected == ServiceConnectionState.Connecting)
 {
     <Div Padding="Padding.Is3.OnX">
 
