Fixes for installation

--- a/BLAZAM/Pages/Error/Oops.razor
+++ b/BLAZAM/Pages/Error/Oops.razor
@@ -8,7 +8,7 @@
     <DevTools />
 }
 
-<AppPageTitle>Oops</AppPageTitle>
+<PageTitle>Oops</PageTitle>
 <h3>@Loc["Oops"]</h3>
 <h6>@ErrorMessage</h6>
 <p>@DetailsMessage</p>
