--- a/BLAZAM/Pages/Install/Authentication.razor
+++ b/BLAZAM/Pages/Install/Authentication.razor
@@ -28,6 +28,7 @@
             <Validation Validator="AppValidationRule.IsValidPassword">
                 <SettingsField>
                     <FieldLabel>Password</FieldLabel>
+                    <FieldHelp>Must be 6 characters or longer containing at least one letter,numer and special character.</FieldHelp>
                     <FieldBody>
                         <TextEdit Role="TextRole.Password" @bind-Text=adminPassword>
                             <Feedback>
