--- a/BLAZAM/Pages/Error/Oops.razor
+++ b/BLAZAM/Pages/Error/Oops.razor
@@ -19,5 +19,5 @@
     public static string? ErrorMessage {get;set;}
     public static string? DetailsMessage {get;set;}
     public static string? HelpMessage {get;set;}
-
+    public static Exception Exception{ get; set; }
 }
