--- a/BLAZAM/Shared/UI/Settings/Templates/EditDirectoryTemplate.razor
+++ b/BLAZAM/Shared/UI/Settings/Templates/EditDirectoryTemplate.razor
@@ -1,4 +1,5 @@
 ﻿@using System.Text.RegularExpressions;
+@using BLAZAM.Common.Extensions;
 @inherits ValidatedForm
 
 <Validations StatusChanged="OnValidation" Mode="ValidationMode.Auto" @ref=validations>
