--- a/BLAZAM/_Imports.razor
+++ b/BLAZAM/_Imports.razor
@@ -37,6 +37,8 @@
 @using BLAZAM.Server.Pages.Error;
 
 @using BLAZAM.Common
+@using BLAZAM.Common.Extensions
+
 @using BLAZAM.Common.Helpers
 @using BLAZAM.Common.Data
 @using BLAZAM.Common.Data.FileSystem;
