--- a/BLAZAM/_Imports.razor
+++ b/BLAZAM/_Imports.razor
@@ -1,6 +1,7 @@
 ﻿@using Newtonsoft.Json
 @using System.Net.Http
 @using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Authentication;
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
